--- a/index.css
+++ b/index.css
@@ -3,15 +3,18 @@
   padding: 0px;
   box-sizing: border-box;
 }
-html{
-  background: linear-gradient(to top, #09203f 0%, #537895 100%) no-repeat center center fixed; 
+html {
+  background: linear-gradient(to top, #09203f 0%, #537895 100%) no-repeat center
+    center fixed;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
+  scroll-behavior: smooth;
 }
 body {
-  background: linear-gradient(to top, #09203f 0%, #537895 100%) no-repeat center center fixed;
+  background: linear-gradient(to top, #09203f 0%, #537895 100%) no-repeat center
+    center fixed;
 }
 #data,
 #data2 {
@@ -20,41 +23,117 @@ body {
   color: aliceblue;
 }
 select {
-  color: aliceblue;
+  /* color: aliceblue; */
   padding: 8px;
   border: none;
   margin-bottom: 75px;
   text-align: center;
   font-style: oblique;
+  font-size: x-large !important;
   background-color: transparent !important;
+  color: aliceblue;
 }
 option {
-  color: black;
+  background-color: #537895;
+  opacity: 0.2;
 }
 .form-select {
   background-color: transparent;
 }
 @media screen and (max-width: 576px) {
+  #search {
+    position: relative;
+    bottom: 35px;
+  }
 }
-hr{
+hr {
   font-weight: bolder;
   border: 2px solid aliceblue;
-
 }
-span{
+span {
   color: aliceblue;
   font-size: x-large;
 }
-p{
+p {
   font-size: large;
   font-weight: lighter;
 }
 @keyframes example {
-  from {left:-50px;}
-  to {left:50px;}
+  from {
+    left: -50px;
+  }
+  to {
+    left: 50px;
+  }
 }
-img{
+img {
   position: relative;
   animation: example 2s;
   animation-timing-function: linear;
+}
+nav {
+  display: grid;
+  text-align: center;
+  grid-template-columns: 50% 50%;
+  justify-content: center;
+}
+a {
+  color: aliceblue;
+  text-decoration: none;
+  font-weight: bold;
+}
+a:hover {
+  text-decoration: underline;
+  color: antiquewhite;
+}
+.text {
+  color: darkblue;
+  width: 217px;
+  background-color: none;
+  opacity: 0.5;
+  font-weight: bolder;
+  border: 1px solid;
+  border-radius: 5%;
+  padding: 3px;
+  font-size: large;
+  text-align: center;
+  caret-color: rgb(60, 63, 66);
+}
+::placeholder{
+color: darkblue;
+opacity: 0.6;
+}
+#data_row{
+  /* position: relative;
+  bottom: 115px; */
+}
+#search_data{
+  position: relative;
+  height: 150px;
+  width: 230px;
+  overflow-y: auto;
+  overflow-x: hidden;
+  /* top: 175px; */
+}
+ul{
+  width: 217px;
+  padding: 5px;
+  position: absolute;
+  margin-top: 10px;
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+li{
+  color: aliceblue;
+  border: 1px solid;
+  background-color: #537895;
+  opacity: 1;
+  z-index: 5;
+}
+li:hover{
+  cursor: pointer;
+  opacity: 1;
+  color: black;
 }
