--- a/index.css
+++ b/index.css
@@ -2,6 +2,8 @@
   margin: 0px;
   padding: 0px;
   box-sizing: border-box;
+  font-family: Georgia, "Times New Roman", Times, serif;
+
 }
 html {
   background: linear-gradient(to top, #09203f 0%, #537895 100%) no-repeat center
@@ -18,7 +20,6 @@ body {
 }
 #data,
 #data2 {
-  font-family: Georgia, "Times New Roman", Times, serif;
   font-weight: bolder;
   color: aliceblue;
 }
@@ -49,14 +50,11 @@ option {
     width: 50px;
     height: 50px;
   }
-  #first_hour > div > *,
-  #daily > div > * {
-    font-size: x-small !important;
-  }
 }
 hr {
-  font-weight: bolder;
-  border: 2px solid aliceblue;
+  /* font-weight: bolder; */
+  border: 2px solid #f0f8ff;
+  
 }
 span {
   color: aliceblue;
@@ -82,7 +80,7 @@ p {
 nav {
   display: grid;
   text-align: center;
-  grid-template-columns: 50% 50%;
+  grid-template-columns: 30% 30% 30%;
   justify-content: center;
 }
 a {
@@ -111,17 +109,13 @@ a:hover {
   opacity: 0.6;
 }
 #search_data {
-  position: relative;
-  height: 150px;
-  width: 230px;
+  height: 117px;
   overflow-y: auto;
   overflow-x: hidden;
-  /* top: 175px; */
 }
 ul {
   width: 217px;
   padding: 5px;
-  position: absolute;
   margin-top: 10px;
   list-style: none;
   display: flex;
@@ -133,7 +127,6 @@ li {
   border: 1px solid;
   background-color: #537895;
   opacity: 1;
-  z-index: 5;
 }
 li:hover {
   cursor: pointer;
@@ -145,11 +138,33 @@ li:hover {
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
-  overflow: auto;
+  overflow: hidden;
   padding: 5px;
 }
 #first_hour > div > *,
-#daily > div > *  {
+#daily > div > * {
   font-size: small;
   color: aliceblue;
+}
+@media screen and (max-width: 992px) {
+  #daily > div > h5:nth-of-type(6) {
+    font-size: x-small;
+    /* color: red; */
+  }
+}
+@media screen and (min-width: 992px) {
+  #daily {
+    justify-content: center;
+  }
+}
+/* width */
+::-webkit-scrollbar {
+  width: 10px;
+}
+
+ 
+/* Handle */
+::-webkit-scrollbar-thumb {
+  background: grey; 
+  border-radius: 10px;
 }
